# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1428 2010-09-23 18:49:19 mb Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --
3.0.0 beta4 2010-09-??
 - 2010-09-23 Changed ResponseFormat to TOFU (what people expect).
 - 2010-09-23 Fixed bug#5965 - AgentTicketMove does not support setting of "Note" and "Subject".
 - 2010-09-23 Fixed bug#6002 - Company logo is overlap in login screen.
 - 2010-09-23 Fixed bug#5999 - Undefined variables generate warning in CustomerTicketMessage.
 - 2010-09-23 Fixed bug#5980 - Free fields are not properly aligned.
 - 2010-09-23 Fixed bug#5983 - Outlook inline image is displayed in attachment list.
 - 2010-09-23 Fixed bug#5849 - Headline / Company Name is hardcoded in the DTL of the customer interface.
 - 2010-09-23 Fixed bug#5988 - ActionRow in customer interface displays incorrectly
    when zoomed, in Firefox/Webkit browser
 - 2010-09-23 Fixed bug#5995 - Pagination in Customer Interface does not work.
 - 2010-09-23 Fixed bug#5982 - Email address does not render properly if it
    contains braces.
 - 2010-09-23 Fixed bug#5987 - No column titles for ticket list in customer interface.
    This can now be configured with the config setting
    "Ticket::Frontend::CustomerTicketOverviewSortable".
 - 2010-09-22 Fixed bug#5964 - The given param 'klant@ykoon.xx' in 'WatchUserIDs' is
    invalid in customer panel!
 - 2010-09-22 Fixed bug#5956 - Arrows to expand/collapse Support Module details point
    in the wrong direction.
 - 2010-09-22 Fixed bug#5976 - Admin Notification (event) text box runs outside the screen.
 - 2010-09-22 Fixed bug#5959 - Agent gets "Invalid argument" JavaScript Error in Ticket Zoom.
 - 2010-09-21 Fixed bug#5970 - Wrong orientation of expand / collapse arrows.